--- a/pom.xml
+++ b/pom.xml
@@ -56,11 +56,6 @@
             <version>${allure.version}</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>io.qameta.allure</groupId>
-            <artifactId>allure-junit5</artifactId>
-            <version>${allure.version}</version>
-        </dependency>
     </dependencies>
 
     <build>
@@ -73,6 +68,7 @@
                     <argLine>
                         -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
                     </argLine>
+                    <argLine>-Dfile.encoding=UTF-8</argLine>
                     <includes>
                         <include>*Test.java</include>
                     </includes>
